--- a/views/castsList.ejs
+++ b/views/castsList.ejs
@@ -50,29 +50,7 @@
                     <td><%= casts[i].gender %></td>
                     <td>
                         <a href="/casts/<%= casts[i].id %>/edit" class="btn btn-outline-info">Edit</a>
-                        <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#deleteModal">
-                            Delete
-                        </button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                </div>
-                                <div class="modal-body">
-                                Apakah benar ingin delete cast?
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="/casts/<%= casts[i].id %>/delete" class="btn btn-outline-info">Delete</a>
-                                    <button type="button" class="btn btn-outline-info" data-dismiss="modal">Cancel</button>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
+                        <a href="/casts/<%= casts[i].id %>/delete" class="btn btn-outline-info" onclick="return confirm('Apakah benar ingin delete cast?')">Delete</a>
                         <a href="/casts/<%= casts[i].id %>/get" class="btn btn-outline-info">See movies</a>
                     </td>                    
                 </tr>
