--- a/views/castEditForm.ejs
+++ b/views/castEditForm.ejs
@@ -1,5 +1,22 @@
 <%- include('partials/header', {title: 'Edit Cast Data'}) %>
 
+<nav class="navbar navbar-expand-sm bg-info navbar-dark justify-content-center">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/production-houses">Production Houses</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/movies">Movies</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="/casts">Casts</a>
+        </li>
+    </ul>
+</nav>
+
 <h1 class="d-flex justify-content-center mt-5">Edit Cast Data</h1>
 
 <div class="container justify-content-center mt-5">
